// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeLiveDecorations > matches the golden snapshot when focused inside a bold construct 1`] = `
[
  "0-0 {"class":"text-2xl font-semibold"}",
  "0-2 {}",
  "0-13 {"tagName":"h1"}",
  "15-15 {"class":"text-xl font-semibold"}",
  "15-18 {}",
  "15-40 {"tagName":"h2"}",
  "30-31 {}",
  "30-40 {"tagName":"em","class":"italic"}",
  "39-40 {}",
  "59-67 {"tagName":"strong","class":"font-semibold"}",
  "69-70 {}",
  "69-77 {"tagName":"em","class":"italic"}",
  "76-77 {}",
  "79-80 {}",
  "79-85 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
  "84-85 {}",
  "91-92 {}",
  "92-97 {"tagName":"a","class":"underline underline-offset-2 decoration-muted-foreground","attributes":{"role":"link"}}",
  "97-119 {}",
  "122-122 {"class":"cm-md-li "}",
  "122-123 {"widget":{"glyph":"•","className":"text-muted-foreground"}}",
  "135-135 {"class":"cm-md-li "}",
  "137-138 {"widget":{"glyph":"◦","className":"text-muted-foreground"}}",
  "154-154 {"class":"cm-md-li "}",
  "168-168 {"class":"cm-md-li "}",
  "184-184 {"class":"cm-md-li "}",
  "184-186 {}",
  "186-189 {"widget":{"checked":false,"className":"size-3.5 pointer-coarse:size-[18px] accent-[var(--primary)] cursor-pointer"}}",
  "200-200 {"class":"cm-md-li "}",
  "200-202 {}",
  "202-205 {"widget":{"checked":true,"className":"size-3.5 pointer-coarse:size-[18px] accent-[var(--primary)] cursor-pointer"}}",
  "206-234 {"class":"text-muted-foreground line-through"}",
  "236-238 {}",
  "238-243 {"tagName":"strong","class":"font-semibold"}",
  "245-247 {}",
  "245-250 {"tagName":"strong","class":"font-semibold"}",
  "248-250 {}",
  "255-256 {}",
  "256-257 {"tagName":"em","class":"italic"}",
  "282-283 {}",
  "283-285 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
  "304-305 {}",
  "305-307 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
]
`;

exports[`computeLiveDecorations > matches the golden snapshot when focused on a plain line 1`] = `
[
  "0-0 {"class":"text-2xl font-semibold"}",
  "0-2 {}",
  "0-13 {"tagName":"h1"}",
  "15-15 {"class":"text-xl font-semibold"}",
  "15-18 {}",
  "15-40 {"tagName":"h2"}",
  "30-31 {}",
  "30-40 {"tagName":"em","class":"italic"}",
  "39-40 {}",
  "59-61 {}",
  "59-67 {"tagName":"strong","class":"font-semibold"}",
  "65-67 {}",
  "69-70 {}",
  "69-77 {"tagName":"em","class":"italic"}",
  "76-77 {}",
  "79-80 {}",
  "79-85 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
  "84-85 {}",
  "91-92 {}",
  "92-97 {"tagName":"a","class":"underline underline-offset-2 decoration-muted-foreground","attributes":{"role":"link"}}",
  "97-119 {}",
  "122-122 {"class":"cm-md-li "}",
  "122-123 {"widget":{"glyph":"•","className":"text-muted-foreground"}}",
  "135-135 {"class":"cm-md-li "}",
  "137-138 {"widget":{"glyph":"◦","className":"text-muted-foreground"}}",
  "154-154 {"class":"cm-md-li "}",
  "168-168 {"class":"cm-md-li "}",
  "184-184 {"class":"cm-md-li "}",
  "184-186 {}",
  "186-189 {"widget":{"checked":false,"className":"size-3.5 pointer-coarse:size-[18px] accent-[var(--primary)] cursor-pointer"}}",
  "200-200 {"class":"cm-md-li "}",
  "200-202 {}",
  "202-205 {"widget":{"checked":true,"className":"size-3.5 pointer-coarse:size-[18px] accent-[var(--primary)] cursor-pointer"}}",
  "206-234 {"class":"text-muted-foreground line-through"}",
  "236-238 {}",
  "238-243 {"tagName":"strong","class":"font-semibold"}",
  "245-247 {}",
  "245-250 {"tagName":"strong","class":"font-semibold"}",
  "248-250 {}",
  "255-256 {}",
  "256-257 {"tagName":"em","class":"italic"}",
  "282-283 {}",
  "283-285 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
  "304-305 {}",
  "305-307 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
]
`;

exports[`computeLiveDecorations > matches the golden snapshot when unfocused 1`] = `
[
  "0-0 {"class":"text-2xl font-semibold"}",
  "0-2 {}",
  "0-13 {"tagName":"h1"}",
  "15-15 {"class":"text-xl font-semibold"}",
  "15-18 {}",
  "15-40 {"tagName":"h2"}",
  "30-31 {}",
  "30-40 {"tagName":"em","class":"italic"}",
  "39-40 {}",
  "59-61 {}",
  "59-67 {"tagName":"strong","class":"font-semibold"}",
  "65-67 {}",
  "69-70 {}",
  "69-77 {"tagName":"em","class":"italic"}",
  "76-77 {}",
  "79-80 {}",
  "79-85 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
  "84-85 {}",
  "91-92 {}",
  "92-97 {"tagName":"a","class":"underline underline-offset-2 decoration-muted-foreground","attributes":{"role":"link"}}",
  "97-119 {}",
  "122-122 {"class":"cm-md-li "}",
  "122-123 {"widget":{"glyph":"•","className":"text-muted-foreground"}}",
  "135-135 {"class":"cm-md-li "}",
  "137-138 {"widget":{"glyph":"◦","className":"text-muted-foreground"}}",
  "154-154 {"class":"cm-md-li "}",
  "168-168 {"class":"cm-md-li "}",
  "184-184 {"class":"cm-md-li "}",
  "184-186 {}",
  "186-189 {"widget":{"checked":false,"className":"size-3.5 pointer-coarse:size-[18px] accent-[var(--primary)] cursor-pointer"}}",
  "200-200 {"class":"cm-md-li "}",
  "200-202 {}",
  "202-205 {"widget":{"checked":true,"className":"size-3.5 pointer-coarse:size-[18px] accent-[var(--primary)] cursor-pointer"}}",
  "206-234 {"class":"text-muted-foreground line-through"}",
  "236-238 {}",
  "238-243 {"tagName":"strong","class":"font-semibold"}",
  "245-247 {}",
  "245-250 {"tagName":"strong","class":"font-semibold"}",
  "248-250 {}",
  "255-256 {}",
  "256-257 {"tagName":"em","class":"italic"}",
  "282-283 {}",
  "283-285 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
  "304-305 {}",
  "305-307 {"tagName":"code","class":"font-mono text-sm bg-muted rounded px-1"}",
]
`;
